# yt-playlist-manager

./: .env.template  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py
.devcontainer/: .env.template  Makefile  devcontainer.json  docker-compose.yml
.devcontainer/infra/docker/python/: Dockerfile  docker-entrypoint.sh
.steering/20260625-initial-implementation/: design.md  requirements.md  tasklist.md  test-cases.md
.steering/20260626-playlist-precheck/: design.md  requirements.md  tasklist.md  test-cases.md
.steering/20260626-quota-reduction/: design.md  requirements.md  tasklist.md  test-cases.md
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
infra/docker/python/: Dockerfile  docker-entrypoint.sh
src/: main.py  pyproject.toml
src/common/config/: __init__.py  config.py  config.template.ini  config.test.ini
src/common/decorator/: __init__.py  exception_deco.py
src/common/exceptions/: __init__.py  my_exceptions.py
src/common/log/: __init__.py  custom_formatter.py  log.py
src/common/retry/: __init__.py  retry.py
src/controller/: cli.py
src/domain/: models.py  parser.py
src/repository/: cache.py  config.py  history.py  youtube.py
src/service/: sync.py
src/tests/: test_api.py  test_cache.py  test_config.py  test_csv_history.py  test_fetch_playlists.py  test_parse_input.py  test_process.py  test_summary.py  test_video_id.py
src/tools/: generate-doc.sh  update-requirements.sh
src/utils/: __init__.py  datetime_parser.py  singleton.py
(+3 files in other folders)
